tests/baselines/reference/parserConstructorDeclaration6.errors.txt
tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration6.ts(2,10): error TS1028: Accessibility modifier already seen.


==== tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration6.ts (1 errors) ====
    class C {
      public public constructor() { }
             ~~~~~~
!!! error TS1028: Accessibility modifier already seen.
    }